--- a/crates/shelter-core/Cargo.toml
+++ b/crates/shelter-core/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/philosofonusus/shelter.nvim"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-korni = { path = "../../../korni" }
+korni = "0.1.4"
 
 [build-dependencies]
 cbindgen = "0.27"
